# homelab-mcp-server

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  USE_CASES.md
docs/: ADVANCED_CUSTOM_SERVER_PATH.md  INTERACT_WITH_MCP.md  QUICK_START.md  STARTER_PROMPTS.md  TRUSTED_PUBLIC_MCP_PATH.md
docs/examples/: Container_Infrastructure_Map_Mock.md  Cutover_Report_Mock.md  Master_Host_List_Mock.md  Network_Master_Map_Mock.md
docs/topology/: PUBLIC_TEMPLATE_GUIDE.md  PUBLIC_TOPOLOGY_SUMMARY.md
templates/: README.md
templates/python-minimal/: .env.example  README.md  claude_desktop.example.json  pyproject.toml
templates/python-minimal/sample_data/: inventory.ini  proxy_routes.json
templates/python-minimal/src/homelab_mcp_starter/: __init__.py  server.py
templates/python-observability/: .env.example  README.md  claude_desktop.example.json  pyproject.toml
templates/python-observability/sample_data/: log_events.json  metrics_snapshot.json  monitors.json
templates/python-observability/src/homelab_mcp_observability/: __init__.py  server.py
templates/python-opnsense/: .env.example  README.md  claude_desktop.example.json  pyproject.toml
templates/python-opnsense/sample_data/: firewall_aliases.json  firewall_rules.json
templates/python-opnsense/src/homelab_mcp_opnsense/: __init__.py  server.py
templates/python-proxmox-portainer/: .env.example  README.md  claude_desktop.example.json  pyproject.toml
templates/python-proxmox-portainer/sample_data/: portainer_containers.json  proxmox_guests.json
(+2 files in other folders)
