[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-mcp-observability-starter"
version = "0.1.0"
description = "Observability oriented Python MCP starter"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
